sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:17: error: type mismatch;
 found   : Unit
 required: Boolean
if (i=lgr) return 
     ^