sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {

var i=0;
var lgr=getNombreValeurs();

	if (!plusPetit(i,i+1)) {
		echange(i,i+1);
		i=i-1;
	}
	
	else {
		i=i+1
	}

if (i==0) {i=i+1}
if (i=lgr) return 

}
